corpus/basic.txt
================================================================================
Basic file
================================================================================

&title=Testing
&artist=Fucuk
&des=This is a string

&lv_1=1
&inote_1=(120){8}C,E

--------------------------------------------------------------------------------

(chart_file
  (title
    (title_key)
    value: (string))
  (artist
    (artist_key)
    value: (string))
  (extra
    (extra_key)
    value: (string))
  (chart_lvl
    (chart_lvl_key)
    chart_index: (integer)
    value: (string))
  (chart
    (chart_key)
    chart_index: (integer)
    value: (bpm
      (number))
    value: (divisor
      division: (number))
    value: (touch
      (touch_position))
    value: (tick)
    value: (endmark)))

================================================================================
Basic file (no endmark w/ comment)
================================================================================

&title=Testing
&artist=Fucuk
&des=This is a string
|| This is a comment

&lv_1=1
&inote_1=(120) || This is another comment
{8}C,

--------------------------------------------------------------------------------

(chart_file
  (title
    (title_key)
    value: (string))
  (artist
    (artist_key)
    value: (string))
  (extra
    (extra_key)
    value: (string))
  (comment
    (string))
  (chart_lvl
    (chart_lvl_key)
    chart_index: (integer)
    value: (string))
  (chart
    (chart_key)
    chart_index: (integer)
    value: (bpm
      (number))
    (comment
    (string))
    value: (divisor
      division: (number))
    value: (touch
      (touch_position))
    value: (tick)))

================================================================================
Touch hold note combinations
================================================================================

&inote_135=(120){8}Cfh[2:1],Chf[2:1],Ch,

--------------------------------------------------------------------------------

(chart_file
  (chart
    (chart_key)
    (integer)
    (bpm
      (number))
    (divisor
      (number))
    (touch_hold
      (touch_position)
      (touch_modifiers)
      (duration
        (first_number
          (number))
        (colon
          (number))))
    (tick)
    (touch_hold
      (touch_position)
      (touch_modifiers)
      (duration
        (first_number
          (number))
        (colon
          (number))))
    (tick)
    (touch_hold
      (touch_position))
    (tick)))

================================================================================
Tap note, hold note, and modifiers
================================================================================

&inote_135=(120.5){4}12,3x,4b,5bx,6h,7h[4:2],8xh[2:1],
1hb[#0.32],2hx[#0.3]/3bhx[4:2],

--------------------------------------------------------------------------------

(chart_file
  (chart
    (chart_key)
    (integer)
    (bpm
      (number))
    (divisor
      (number))
    (tap
      (button_position))
    (tap
      (button_position))
    (tick)
    (tap
      (button_position)
      (tap_modifiers))
    (tick)
    (tap
      (button_position)
      (tap_modifiers))
    (tick)
    (tap
      (button_position)
      (tap_modifiers))
    (tick)
    (hold
      (button_position))
    (tick)
    (hold
      (button_position)
      (duration
        (first_number
          (number))
        (colon
          (number))))
    (tick)
    (hold
      (button_position)
      (hold_modifiers)
      (duration
        (first_number
          (number))
        (colon
          (number))))
    (tick)
    (hold
      (button_position)
      (hold_modifiers)
      (duration
        (pound
          (number))))
    (tick)
    (hold
      (button_position)
      (hold_modifiers)
      (duration
        (pound
          (number))))
    (each)
    (hold
      (button_position)
      (hold_modifiers)
      (hold_modifiers)
      (duration
        (first_number
          (number))
        (colon
          (number))))
    (tick)))

================================================================================
No starting bpm and divisor is an error
================================================================================

&inote_135=Cfh[2:1],

--------------------------------------------------------------------------------

(chart_file
  (ERROR
    (chart_key)
    (integer)
    (button_position)
    (button_position)
    (tick)))
